--- a/Autoencoder_sample.ipynb
+++ b/Autoencoder_sample.ipynb
@@ -139,10 +139,13 @@
     "        class Encoder(nn.Module):\n",
     "            def __init__(self, output_size=2):\n",
     "                super(Encoder, self).__init__()\n",
-    "                self.dense = nn.Linear(28*28, output_size, bias=True)\n",
+    "                self.dense = nn.Linear(28*28, 1024, bias=True)\n",
+    "                self.dense2 = nn.Linear(1024, output_size, bias=True)\n",
     "\n",
     "            def forward(self, x):\n",
-    "                return self.dense(x)\n",
+    "                out = self.dense(x)\n",
+    "                out = self.dense2(2)\n",
+    "                return out\n",
     "\n",
     "        class Decoder(nn.Module):\n",
     "            def __init__(self, input_size=2):\n",
