added new files

--- a/Autoencoder_sample.ipynb
+++ b/Autoencoder_sample.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "    def __init__(self,dim_latent_representation=2):\n",
     "\n",
-    "        super(Autoencoder,self).__init__()\n",
+    "        super(Autoencoder, self).__init__()\n",
     "\n",
     "        class Encoder(nn.Module):\n",
     "            def __init__(self, output_size=2):\n",
@@ -162,7 +162,51 @@
     "        x = self.encoder(x)\n",
     "        x = self.decoder(x)\n",
     "        # for the VAE forward function should also return mu and logvar\n",
-    "        return x"
+    "        return x\n",
+    "\n",
+    "class VAE(nn.Module):\n",
+    "\n",
+    "    def __init__(self,dim_latent_representation=2):\n",
+    "\n",
+    "        super(VAE, self).__init__()\n",
+    "\n",
+    "        class Encoder(nn.Module):\n",
+    "            def __init__(self, output_size=2):\n",
+    "                super(Encoder, self).__init__()\n",
+    "                self.dense = nn.Linear(28*28, output_size, bias=True)\n",
+    "\n",
+    "            def forward(self, x):\n",
+    "                out = self.dense(x)\n",
+    "\n",
+    "                return out\n",
+    "\n",
+    "        class Decoder(nn.Module):\n",
+    "            def __init__(self, input_size=2):\n",
+    "                super(Decoder, self).__init__()\n",
+    "                self.dense = nn.Linear(input_size, 28*28, bias=True)\n",
+    "                self.activation = nn.Tanh()\n",
+    "\n",
+    "            def forward(self, z):\n",
+    "                out = self.dense(z)\n",
+    "                out = self.activation(out)\n",
+    "                return out\n",
+    "\n",
+    "        self.encoder = Encoder(output_size=dim_latent_representation)\n",
+    "        self.decoder = Decoder(input_size=dim_latent_representation)\n",
+    "\n",
+    "    # Implement this function for the VAE model\n",
+    "    # def reparameterise(self, mu, logvar):\n",
+    "    #     if self.training:\n",
+    "    #         # return reparametrized mu\n",
+    "    #     else:\n",
+    "    #         return mu\n",
+    "\n",
+    "    def forward(self, x, device):\n",
+    "        # This function should be modified for the DAE and VAE\n",
+    "        x, mu, var = self.encoder(x)\n",
+    "        x = self.decoder(x)\n",
+    "        # for the VAE forward function should also return mu and logvar\n",
+    "        return x, mu, var"
    ]
   },
   {
@@ -336,13 +380,13 @@
     }
    ],
    "source": [
-    "from autoencoder_starter import Autoencoder_Trainer\n",
+    "from vae_starter import VAE_Trainer\n",
     "\n",
     "LEARNING_RATE = 0.0005\n",
     "EPOCH_NUMBER= 5 # the number of epochs and learning rate can be tuned.\n",
     "\n",
-    "autoencoder = Autoencoder(dim_latent_representation=30)\n",
-    "trainer = Autoencoder_Trainer(autoencoder_model=autoencoder,learning_rate=LEARNING_RATE,path_prefix=path_prefix)\n",
+    "autoencoder = VAE(dim_latent_representation=30)\n",
+    "trainer = VAE_Trainer(autoencoder_model=autoencoder,learning_rate=LEARNING_RATE,path_prefix=path_prefix)\n",
     "\n",
     "try:\n",
     "    for epoch in range(1, EPOCH_NUMBER + 1):\n",
