--- a/Autoencoder_sample.ipynb
+++ b/Autoencoder_sample.ipynb
@@ -101,7 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "class Autoencoder(nn.Module):\n",
+    "class DAE(nn.Module):\n",
     "\n",
     "    def __init__(self,dim_latent_representation=2):\n",
     "\n",
